--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="http://at.alicdn.com/t/font_412551_7tqhwk2o1y06bt9.css">
 </head>
 
 <body>
